# TraderBacktest

./: .gitignore  .gitmodules  AAPL.csv  CMakeLists.txt  README.md  library.h  main.cpp
backtest/: TradeLogic.cpp  backtest.cpp  backtest.h
examples/: CMakeLists.txt  main.cpp
include/: IndexComparableItem.h  backtest.h  indicators.h  libbacktest.h  loadConfig.h  mObserver.h  stocks.h  trading_module.h
include/base/: ComparableItem.h  IndexComparableItem.h  ValueComparableItem.h  item.h  mObserver.h
include/line/: line.h  lineObserver.h
include/lineManager/: lineManager.h  lineManagerObserver.h  lineManagerVisitor.h
include/position/: position.h
include/strategy/: StrategyFactory.h  TALibStrategy.h
indicators/: indicators.cpp  indicators.h  ma.cpp
src/: loadConfig.cpp  tests.cpp
src/backtest/: ConditionTypeConverter.cpp  EnhancedTradingEngine.cpp  TradeLogic.cpp  backtest.cpp
src/config/: configs.yaml
src/examples/: CMakeLists.txt  aapl.csv  main.cpp  test_boost.cpp  test_loadconfig.cpp  test_obverver.cpp
src/indicators/: indicators.cpp
src/stocks/: stocks.cpp
src/strategy/: StrategyFactory.cpp  TALibStrategy.cpp
src/trading/: trading_module.cpp
stocks/: stocks.cpp  stocks.h
trading/: trading_module.cpp  trading_module.h
